--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingApp
 spring.datasource.username=root
 spring.datasource.password=MIKmik123!
+
+mferrara.AppointmentBookingApp.jwtSecret = SKDndisd89!
